--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:h2:mem:appdb
+spring.jpa.show-sql=true
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
 
+spring.h2.console.path=/h2-console
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
+scheduler.executor1-scheduler: 0 * * * * *
+scheduler.executor1-pool-size: 8
